--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-logger": "^1.1.0",
     "react-masonry-css": "^1.0.16",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "reselect": "^5.0.1",
     "sass": "^1.63.4",
     "web-vitals": "^2.1.4"
   },
